Changelog
=========


v0.0.17
=======

- New: PriceListId model.

v0.0.16.3
=========

Released on November 8, 2018.

- Fix: Product.PriceListId renamed to VatId. 
- Fix: Produt.UnitofMeasure has no default value anymore.

v0.0.16.2
=========

Released on November 6, 2018.

- New: ProductCategory class. Closes #14.
- New: Product.AvailableStock. Closes #13.
- New: Product.CurrentStock. Closes #13.
- New: UnitOfMeasureHelpers.DefaultValue (defaults to "nr"). Closes #11.
- Fix: UnitOfMeasureHelpers.UnitOfMeasures lacks commonly used measures.
- Fix: Product.UnitOfMeasure defaults to UnitOfMeasureHelpers.DefaultValue. Addresses #11.
- Fix: Preferences.UnitOfMeasure defaults to UnitOfMeasureHelpers.DefaultValue. Addresses #11.
- Fix: Product.Vat changed to Product.VatId. Closes #12.

v0.0.16.1
=========

Released on October 30, 2018.

- Fix: Warehouse now only has a Name property.
- New: UnitOfMeasureHelpers.UnitOfMeasures (ReadOnlyCollection<string>).

v0.0.16.0
=========

Released on October 30, 2018.

- New: Support for Product model.

v0.0.15.14
==========

Released on October 25, 2018.

- Fix: Payment.PaymentMethod defaults to a PaymentHelpers.PaymentMethods reference.
- Fix: Payment.FirstPaymentDate defaults to a PaymentHelpers.FirstPaymentDates reference.
- Fix: Payment.FirstPaymentOption defaults to a PaymentHelpers.FirstPaymentOptions reference.
- Fix: PaymentHelpers.FirstPaymentDates is not a ReadOnlyCollection. Addresses #9.
- Fix: PaymentHelpers.FirstPaymentOptions is not a ReadOnlyCollection. Addresses #9.

v0.0.15.13
==========

Released on October 16, 2018.

- Move Contact.EInvoiceId to Contact.SalesSettings.

v0.0.15.12
==========

Released on October 3, 2018.

- Remove EmailAddress attributes.
- Remove Required attributes.

v0.0.15.11
==========

Released on September 26, 2018.

- Properties decorated with EmailAdress attribute now also use custom error messages.

v0.0.15.10
=========

Released on September 26, 2018.
